trunk/Archive2/fd/c91985138e5354/output
main.cpp:19:19: error: no member named 'exchange' in namespace 'std'
    { return std::exchange(flags_, newf); }
             ~~~~~^
main.cpp:42:9: error: no member named 'exchange' in namespace 'std'
   std::exchange(v, {1,2,3,4});
   ~~~~~^
main.cpp:53:9: error: no member named 'exchange' in namespace 'std'
   std::exchange(fun,f);
   ~~~~~^
3 errors generated.
